--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,67 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html, body {
+  background-color: #fff8f0;
+  color: #2b4141;
+  font-family: 'Work Sans', sans-serif;
+  height: 100%;
+  margin: 0px;
+ }
+
+nav {
+  background-color: #9db5b2; 
+  color: #fff8f0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#after-nav {
+  padding: 20px; }
+
+h1 {
+  text-align: center; }
+
+
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical; }
+
+footer > a {
+  color: white; 
+  height: 50px;
 }
+
+.content {
+  min-height: calc(100vh - 50px);
+}
+
+.content-inside {
+  padding: 20px;
+  padding-bottom: 50px;
+}
+
+footer > a:hover {
+  margin-top: 0px;
+  color: #d7dae0; }
+
+#page-content {
+  flex: 1 0 auto;
+
+  padding-top: 10px; }
+
+#sticky-footer {
+  flex-shrink: none;
+  bottom: 0px; }
+
+#toplink {
+  float: right; }
+
+@media only screen and (max-width: 500px) {
+  #toplink {
+    color: red;
+    float: center; } }
+
+/*# sourceMappingURL=style.css.map */
+
