--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,6 @@ footer > a {
 }
 
 footer > a:hover {
-  margin-top: 0px;
   color: #d7dae0; }
 
 #page-content {
@@ -129,12 +128,11 @@ footer {
   margin-top: 70px;
 }
 
-.mobileShow {display: none;}
-  /* Smartphone Portrait and Landscape */
-  @media only screen
-    and (min-device-width : 320px)
-    and (max-device-width : 480px){ 
-      .mobileShow {display: inline;}
+
+@media only screen and (max-width: 835px){
+  .mobileShow {
+    display: inline
+  }
 }
 
 
@@ -159,9 +157,6 @@ main > nav {
 .section-nav {
   padding-left: 0px;
   border-right: 1px solid #efefef;
-  margin-top: 20px;
-  padding-top: 20px;
-  border-top: 30px solid;
   background-color: white;
 
 }
@@ -190,7 +185,7 @@ html, body {
 
 
 ul, ol {
-  list-style: none;
+  list-style: disk;
   margin: 0;
   padding: 0;
 }
@@ -214,7 +209,7 @@ main {
 
 /** enlarge the sections for this demo, so that we have a long scrollable page **/
 section {
-  padding-bottom: 20rem;
+  padding-bottom: 1rem;
 }
 
 #resume_content{
@@ -225,4 +220,19 @@ section {
 
 iframe{
   overflow: auto;
+}
+
+.im_contain{
+  text-align: center;
+  padding-bottom: 20px;
+}
+
+.im-right{
+  float: right;
+  margin-left: 30px;
+}
+
+.im-left{
+  float: left;
+  margin-right: 30px;
 }
